# tracking_model

./: .gitignore  README.md  pyproject.toml
src/tracking_model/: GeometricInterpolation.py  Label_read.py  __main__.py  io_utils_el.py  model.py  relabel.py  superimpose.py
